--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,13 +25,15 @@ jobs:
     steps:
       - name: Checkout your repository
         uses: actions/checkout@v4
-      - name: Install and build
-        uses: withastro/action@v1
+      - name: Install, build, and upload your site
+        uses: withastro/action@v3
         with:
           # If your project is in a subfolder, you can uncomment this line
           # project-path: ./website
-          astro-build-command: "npm run build"
+          astro-build-command: "pnpm build"
           astro-dist-directory: "dist"
+          node-version: 20
+          package-manager: pnpm@latest
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
