--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
+    "globals": "^17.3.0",
     "husky": "^9.1.7",
     "prettier": "^3.8.1",
     "ts-morph": "^27.0.2",
